bugfix #150: documents not showing up in IE7 add zoom:1 to fileitem

--- a/public/zoolu-statics/css/core_content.css
+++ b/public/zoolu-statics/css/core_content.css
@@ -638,6 +638,7 @@ Document Chooser Element */
 }
 
 .docitem, .fileitem, .contactitem {
+    zoom: 1;
     margin: 0 0 0 10px;
     border-bottom: 1px solid #e4e4e4;
     cursor: move;
